# finance-api-backend-v2

./: .env.example  .gitignore  API_README.md  CLAUDE.md  LANGGRAPH_MIGRATION.md  README.md  SAMPLE_RESPONSE.json  TESTING.md  exa_test_results.json  main.py  pyproject.toml  requirements.txt  sample.json  test_all_exa_queries.py  test_api_exa.py  test_exa_queries.py
.github/workflows/: develop_astryx-ai-microservice-dev.yml
core/: config.py
llm_agent/: agent_multi.py  prompts_multi.py  readme.md  tools_multi.py
services/: chat_service.py
storage/: file_memory.py
